fixed about card spacing, fixed mobile view for projects, and home page

--- a/docs/style.css
+++ b/docs/style.css
@@ -346,6 +346,7 @@ body{
 .about-card-info p{
     display: flex;
     justify-content: space-between;
+    gap: 6rem;
     font-size: 0.9rem;
     border-bottom: 1px solid rgba(255,255,255,0.07);
     padding-bottom: 0.5rem;
@@ -646,11 +647,15 @@ body{
         align-self: center;
     }
     .hero-image{
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     
     .experience-entry{
         flex-direction: column;
+    }
+
+    .projects{
+        margin-left: -30px;
     }
 
     .about{
